--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-merge-refs": "^1.1.0",
+    "sass": "^1.38.2"
   },
   "devDependencies": {
+    "@types/classnames": "^2.3.1",
+    "@types/node": "^16.7.7",
+    "@types/react": "^17.0.19",
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "tailwindcss": "^2.2.4",
+    "typescript": "^4.4.2"
   }
 }
